@@ -8,8 +8,8 @@
     <field name="on_model" colspan="3" widget="selection"/>
     <label name="kind" xalign="0"/>
     <field name="kind" colspan="3"/>
-    <label name="internal_edm" xalign="0"/>
-    <field name="internal_edm"/>
+    <label name="format_for_internal_edm" xalign="0"/>
+    <field name="format_for_internal_edm"/>
     <label name="document_desc"/>
     <field name="document_desc"/>
     <label name="modifiable_before_printing"/>
